--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Esse é meu primeiro site">
     <title>Allan Cell</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -17,7 +17,7 @@
         <div class="header-inner-content">
 
             <div class="logo-group">
-                <img src="/img/witch.png">
+                <img src="img/witch.png">
                 <h1 class="logo">ALLAN<span>CELL</span></h1>
             <button onclick="toggleDark()" style="margin-left: 1rem; padding: 0.5rem 1rem; cursor: pointer;">
   Alternar tema
@@ -33,8 +33,8 @@
                 </ul>
             </nav>
             <div class="nav-icon-container">
-                <img src="/img/cart.png">
-                <img src="/img/menu.png">
+                <img src="img/cart.png">
+                <img src="img/menu.png">
             </div>
         </div>
 
@@ -54,7 +54,7 @@
                     <button>Ver agora!</button>
                 </div>
                 <div class="header-bottom-side-right">
-                    <img src="/img/gaming-msi-header.png">
+                    <img src="img/gaming-msi-header.png">
                 </div>
             </div>
         </div>
@@ -65,26 +65,26 @@
             <div class="subtitle-underline"></div>
             <div class="cols-4">
                 <div>
-                    <img src="/img/EChair-removebg-preview.png">
+                    <img src="img/EChair-removebg-preview.png">
                     <p class="product-name">Cadeira Ergonomica</p>
                     <p class="rate">&#9733;&#9733;&#9733;&#9733;&#9734;</p>
                     <p><span>R$</span>599,99</p>
                 </div>
                 <div>
-                    <img src="/img/dualshock-removebg-preview.png">
+                    <img src="img/dualshock-removebg-preview.png">
                     <p class="product-name">Controle DualShock ps4</p>
                     <p class="rate">&#9733;&#9733;&#9733;&#9733;&#9734;</p>
                     <p><span>R$</span>269,99</p>
                 </div>
                 <div>
-                    <img src="/img/laptop2-removebg-preview.png">
-                    <p class="product-name">LapTop pe$o</p>
+                    <img src="img/laptop2-removebg-preview.png">
+                    <p class="product-name">LapTop</p>
                     <p class="rate">&#9733;&#9733;&#9733;&#9733;&#9734;</p>
                     <p><span>R$</span>7.000</p>
                 </div>
                 <div>
-                    <img src="/img/mousepad_2-removebg-preview.png">
-                    <p class="product-name">Mouse Pad de fresk</p>
+                    <img src="img/mousepad_2-removebg-preview.png">
+                    <p class="product-name">Mouse Pad Gamer</p>
                     <p class="rate">&#9733;&#9733;&#9733;&#9733;&#9734;</p>
                     <p><span>R$</span>79,99</p>
                 </div>
@@ -95,25 +95,25 @@
             <div class="subtitle-underline"></div>
             <div class="cols-5">
                 <div>
-                    <img src="/img/iphone16-removebg-preview.png">
+                    <img src="img/iphone16-removebg-preview.png">
                     <p class="product-name">Iphone16 256gb</p>
                     <p class="rate">&#9733;&#9733;&#9733;&#9733;&#9734;</p>
                     <p><span>R$</span>5.999,99</p>
                 </div>
                 <div>
-                    <img src="/img/s24-removebg-preview.png">
+                    <img src="img/s24-removebg-preview.png">
                     <p class="product-name">samsung s24 256gb</p>
                     <p class="rate">&#9733;&#9733;&#9733;&#9733;&#9734;</p>
                     <p><span>R$</span>6.999,99</p>
                 </div>
                 <div>
-                    <img src="/img/xiaomi-removebg-preview.png">
+                    <img src="img/xiaomi-removebg-preview.png">
                     <p class="product-name">Xiaomi 256gb</p>
                     <p class="rate">&#9733;&#9733;&#9733;&#9733;&#9734;</p>
                     <p><span>R$</span>6.400</p>
                 </div>
                 <div>
-                    <img src="/img/download-removebg-preview.png">
+                    <img src="img/download-removebg-preview.png">
                     <p class="product-name">Ps5 Pro</p>
                     <p class="rate">&#9733;&#9733;&#9733;&#9733;&#9734;</p>
                     <p>R$22.000</p>
